Fix BackToTop visibility & change scroll of items & Fix the product card styles & Fix checkout container style

--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -73,9 +73,9 @@
 
 .productName {
   padding-top: 16px;
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 600;
-  line-height: 21px;
+  line-height: 17px;
   flex: 1;
 }
 
