--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -63,6 +63,7 @@
 
   @include on-desktop {
     width: 368px;
+    height: 100%;
   }
 }
 
